samples/_failures_safe/1761540787_1d9278_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26f8bc76.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_26f8bc76.c:154:12: error: missing terminating " character
  154 |     printf("\
      |            ^~
./samples/SAFE/__tmp_26f8bc76.c:154:5: error: expected expression at end of input
  154 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_26f8bc76.c:154:5: error: expected declaration or statement at end of input
